[package]
name = "languages-github-actions"
rust-version = "1.75"
edition = "2021"
# This crate isn't published to crates.io, however, we still need the version field here,
# since it's updated to the real version as part of tagging/publishing to GitHub releases.
version = "0.7.0"
publish = false

[[bin]]
name = "actions"
path = "src/main.rs"

[profile.release]
strip = true

[lints.rust]
unreachable_pub = "warn"
unsafe_code = "warn"
unused_crate_dependencies = "warn"

[lints.clippy]
panic_in_result_fn = "warn"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["now", "std"] }
clap = { version = "4", default-features = false, features = [
    "derive",
    "error-context",
    "help",
    "std",
    "usage",
] }
ignore = "0.4"
indexmap = "2"
lazy_static = "1"
libcnb-common = "=0.21.0"
libcnb-data = "=0.21.0"
libcnb-package = "=0.21.0"
markdown = "1.0.0-alpha.17"
fastrand = "2"
regex = "1"
semver = "1"
serde_json = "1"
thiserror = "1"
toml = "0.8"
toml_edit = "0.22"
uriparse = "0.6"
serde = { version = "1.0.198", features = ["derive"] }

[dev-dependencies]
tempfile = "3.10"
