[package]
name = "languages-github-actions"
rust-version = "1.89"
edition = "2024"
# This crate isn't published to crates.io, however, we still need the version field here,
# since it's updated to the real version as part of tagging/publishing to GitHub releases.
version = "1.1.3"
publish = false

[[bin]]
name = "actions"
path = "src/main.rs"

[profile.release]
strip = true

[lints.rust]
unreachable_pub = "warn"
unsafe_code = "warn"
unused_crate_dependencies = "warn"

[lints.clippy]
panic_in_result_fn = "warn"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["now", "std"] }
clap = { version = "4", default-features = false, features = [
    "derive",
    "error-context",
    "help",
    "std",
    "usage",
] }
fastrand = "2"
ignore = "0.4"
indexmap = "2"
libcnb-common = "=0.29.1"
libcnb-data = "=0.29.1"
libcnb-package = "=0.29.1"
markdown = "1"
regex = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.9"
toml_edit = "0.23"
uriparse = "0.6"

[dev-dependencies]
tempfile = "3"
